--- a/org/design.org
+++ b/org/design.org
@@ -39,6 +39,9 @@ meant to have a complete and rich runtime.
      reference to it's definition.
    - Macro: same as a function but transformed during 'macro expansion'. A
      special form is a kind of macro.
+   - Error: *TO BE DETERMINED*
+   - Byte: ASCII characters
+   - Array: Wrapper for std::array<Object*>
      
 ** Binding Rules
    *def* creates a definition and binds it to a value in the /current scope/.
@@ -261,5 +264,5 @@ Currently we will take the first approach and redesign this if required.
     return nullptrs. But using references reduces chances of nullptr
     dereferences and provides nice value syntax on top of pointer semantics.
     
-    To migrate to completely using references, the key is to use Error objects
+    To migrate to completely using references, the key is to use Error/Void objects
     (subclass of sl::Object).
